# 2025-2c-tp1-concu

./: .gitignore  Cargo.toml  README.md
scripts/: compare_expected.sh  get_dataset.sh  run_analysis.sh  split_dataset.sh
src/: error.rs  lib.rs  main.rs  processors.rs  utils.rs
src/models/: datetime_format.rs  mod.rs  taxi_trip.rs
src/transformations/: batch_aggregator.rs  hourly_analyzer.rs  hourly_pattern.rs  mod.rs  multi_analyzer.rs  payment_analyzer.rs  payment_stats.rs  peak_zone.rs  peak_zone_analyzer.rs
tests/: unit_tests.rs
