[package]
name = "nyc-taxi-processor"
version = "0.1.0"
edition = "2021"

[dependencies]
rayon = "1.8"
serde = { version = "1.0", features = ["derive"] }
csv = "1.3"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.4", features = ["derive"] }
serde_json = "1.0"
num_cpus = "1.16"